--- a/src/server/package.json
+++ b/src/server/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0-latest",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "test": "jest"
   },
   "author": "",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
