--- a/src/server/.env
+++ b/src/server/.env
@@ -1,1 +1,7 @@
 PORT=5000
+
+DATABASE_URL=postgresql://postgres:postgres@crafty_db:5432/crafty?schema=public
+
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=crafty
