--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,14 +12,14 @@
   "author": "",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
+    "@apollo/server": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "graphql": "^16.6.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/pg": "^8.6.6",
