--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,17 +18,17 @@ jobs:
           envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
           envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
           envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
-          directory: server
+          directory: src/server
           file_name: .env
           fail_on_empty: true
       - name: Create client env file
         uses: SpicyPizza/create-envfile@v1.3.1
         with:
           envkey_BASE_URL: ${{secrets.BASE_URL}}
-          directory: client
+          directory: src/client
           file_name: .env
           fail_on_empty: true
       - name: Build
         run: docker compose build
       - name: Run
-        run: docker compose down && docker compose up -d
+        run: cd src/ && docker compose down && docker compose up -d
