--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
           file_name: .env
           fail_on_empty: true
       - name: Build
-        run: docker compose build
+        run: cd src/ && docker compose build
       - name: Run
         run: cd src/ && docker compose down && docker compose up -d
