src/server/src/migrations.ts: Add implementations for migrations

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
+    "target": "es2015",
     "esModuleInterop": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
