src/docker-compose.yml: CREATE DATABASE when container starts

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - server/.env
     volumes:
       - postgres-volume:/var/lib/postgresql/data
+    command: ["psql", "-c", "'CREATE DATABASE crafty_prod;'"]
 
   node:
     container_name: crafty-server
