--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,14 +13,17 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@apollo/server": "^4.6.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "joi": "^17.9.1",
     "pg": "^8.10.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/pg": "^8.6.6",
