--- a/src/infrastructure/nginx.conf
+++ b/src/infrastructure/nginx.conf
@@ -1,5 +1,11 @@
 server {
-    listen 80;
+    listen [::]:443 ssl;
+    listen 443 ssl;
+    ssl_certificate     /etc/letsencrypt/live/crafty-inspire.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/crafty-inspire.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssh_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
 
     location / {
         root /var/www/html;
@@ -15,4 +21,10 @@ server {
 
         proxy_pass http://node:5000/;
     }
+ }
+
+ server {
+    listen 80;
+    listen [::]:80;
+    return 301 https://$host$request_uri;
  }
