--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,8 +33,10 @@ services:
     build: ./infrastructure
     ports:
       - 80:80
+      - 443:443
     volumes:
       - react-volume:/var/www/html
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - postgres
       - node
