--- a/src/infrastructure/nginx.conf
+++ b/src/infrastructure/nginx.conf
@@ -4,7 +4,7 @@ server {
     ssl_certificate     /etc/letsencrypt/live/crafty-inspire.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/crafty-inspire.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssh_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 
     location / {
