--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/src/main.js",
     "dev": "nodemon src/main.ts",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit --runInBand"
   },
   "author": "",
   "license": "AGPL-3.0-or-later",
