--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Build
         run: cd src/ && docker compose build
       - name: Run
-        run: cd src/ && docker compose down && docker compose up -d
+        run: cd src/ && docker compose down && docker compose up --force-recreate -d
